# micro-manager

./: micromanager.sln
DeviceAdapters/HiSeq2x00Camera/: HiSeq2x00Camera.cpp  HiSeq2x00Camera.h  HiSeq2x00Camera.vcproj  HiSeq2x00Camera.vcxproj  HiSeq2x00Camera.vcxproj.filters  Makefile.am
DeviceAdapters/HiSeq2x00MotorY/: HiSeq2x00MotorY.cpp  HiSeq2x00MotorY.h  HiSeq2x00MotorY.vcproj  HiSeq2x00MotorY.vcxproj  HiSeq2x00MotorY.vcxproj.filters  Makefile.am
DeviceAdapters/HiSeq2x00Stage/: HiSeq2x00Stage.cpp  HiSeq2x00Stage.h  HiSeq2x00Stage.vcxproj  HiSeq2x00Stage.vcxproj.filters  Makefile.am
DeviceAdapters/HiSeq2x00StageZ/: HiSeq2x00StageZ.cpp  HiSeq2x00StageZ.h  HiSeq2x00StageZ.vcproj  HiSeq2x00StageZ.vcxproj  HiSeq2x00StageZ.vcxproj.filters  Makefile.am
DeviceAdapters/HiSeq2x00XY/: HiSeq2x00XY.cpp  HiSeq2x00XY.h  HiSeq2x00XY.vcproj  HiSeq2x00XY.vcxproj  HiSeq2x00XY.vcxproj.filters  Makefile.am
