
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_HiSeq2x00Stage.la
libmmgr_dal_HiSeq2x00Stage_la_SOURCES = HiSeq2x00Stage.cpp HiSeq2x00Stage.h h
libmmgr_dal_HiSeq2x00Stage_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_HiSeq2x00Stage_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = HiSeq2x00Stage.vcproj license.txt
